// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With session 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-1"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-1"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Corpus
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Corpus
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        />
      </header>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <nav
              class="nav nav-tabs"
              role="tablist"
            >
              <a
                aria-controls="CorpusTab-2-tabpane-L"
                aria-selected="true"
                class="nav-item nav-link active"
                data-rb-event-key="L"
                href="#"
                id="CorpusTab-2-tab-L"
                role="tab"
              >
                Literature
              </a>
              <a
                aria-controls="CorpusTab-2-tabpane-D"
                aria-selected="false"
                class="nav-item nav-link"
                data-rb-event-key="D"
                href="#"
                id="CorpusTab-2-tab-D"
                role="tab"
              >
                Divination
              </a>
              <a
                aria-controls="CorpusTab-2-tabpane-Lex"
                aria-selected="false"
                class="nav-item nav-link"
                data-rb-event-key="Lex"
                href="#"
                id="CorpusTab-2-tab-Lex"
                role="tab"
              >
                Lexicography
              </a>
              <a
                aria-controls="CorpusTab-2-tabpane-Med"
                aria-selected="false"
                class="nav-item nav-link"
                data-rb-event-key="Med"
                href="#"
                id="CorpusTab-2-tab-Med"
                role="tab"
              >
                Medicine
              </a>
            </nav>
            <div
              class="tab-content"
            >
              <div
                aria-hidden="false"
                aria-labelledby="CorpusTab-2-tab-L"
                class="fade tab-pane active show"
                id="CorpusTab-2-tabpane-L"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I. Narrative Poetry
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/L/1/1"
                        >
                          1
                          . 
                          First Category 1
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        99
                         vv.
                      </div>
                    </li>
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/L/1/2"
                        >
                          2
                          . 
                          First Category 2
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        99
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
                <section>
                  <h3>
                    II. Monologue and dialogue literature
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/L/2/1"
                        >
                          1
                          . 
                          Second Category
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        2
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
                <section>
                  <h3>
                    III. Literary Hymns and Prayers
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/L/3/1"
                        >
                          1
                          . 
                          Third Category
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        ±
                        45
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
              <div
                aria-hidden="true"
                aria-labelledby="CorpusTab-2-tab-D"
                class="fade tab-pane"
                id="CorpusTab-2-tabpane-D"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I. Celestial Divination (
                    <em>
                      Enūma Anu Enlil
                    </em>
                    )
                  </h3>
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    II. Terrestrial Divination (
                    <em>
                      Šumma Ālu
                    </em>
                    )
                  </h3>
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    III. Extispicy (
                    <em>
                      Bārûtu
                    </em>
                    )
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/D/3/1"
                        >
                          1
                          . 
                          Divination Third Category
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        ±
                        674
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
              <div
                aria-hidden="true"
                aria-labelledby="CorpusTab-2-tab-Lex"
                class="fade tab-pane"
                id="CorpusTab-2-tabpane-Lex"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I.  Urra = 
                    <em>
                      ḫubullu
                    </em>
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/Lex/1/1"
                        >
                          1
                          . 
                          Lexicography First Category
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        3
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
              <div
                aria-hidden="true"
                aria-labelledby="CorpusTab-2-tab-Med"
                class="fade tab-pane"
                id="CorpusTab-2-tabpane-Med"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I. Nineveh Medical Encyclopaedia
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        <a
                          href="/corpus/Med/1/1"
                        >
                          1
                          . 
                          Medicine First Category
                        </a>
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        3
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <img
              alt="LibraryCropped.svg"
              class="img-fluid"
              src="http://example.com/images/LibraryCropped.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`Without session 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <span
          class="navbar-brand"
        >
          <a
            href="https://www.lmu.de"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              class="Header__corporate-logo img-fluid"
              src="LMU_Logo.svg"
            />
          </a>
        </span>
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-4"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/signs"
                href="/signs"
              >
                Signs
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Login
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-4"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <main
    class="main"
  >
    <div
      class="main__content"
    >
      <header
        class="main__header"
      >
        <nav
          aria-label="breadcrumb"
          class="main__breadcrumbs"
        >
          <ol
            class="breadcrumb"
          >
            <li
              class="breadcrumb-item active"
            >
              <a
                href="/"
              >
                eBL
              </a>
            </li>
            <li
              aria-current="page"
              class="breadcrumb-item active"
            >
              Corpus
            </li>
          </ol>
        </nav>
        <h2
          class="main__heading"
        >
          Corpus
        </h2>
        <div
          class="main__toolbar btn-toolbar"
          role="toolbar"
        />
      </header>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-md-6"
          >
            <nav
              class="nav nav-tabs"
              role="tablist"
            >
              <a
                aria-controls="CorpusTab-5-tabpane-L"
                aria-selected="true"
                class="nav-item nav-link active"
                data-rb-event-key="L"
                href="#"
                id="CorpusTab-5-tab-L"
                role="tab"
              >
                Literature
              </a>
              <a
                aria-controls="CorpusTab-5-tabpane-D"
                aria-selected="false"
                class="nav-item nav-link"
                data-rb-event-key="D"
                href="#"
                id="CorpusTab-5-tab-D"
                role="tab"
              >
                Divination
              </a>
              <a
                aria-controls="CorpusTab-5-tabpane-Lex"
                aria-selected="false"
                class="nav-item nav-link"
                data-rb-event-key="Lex"
                href="#"
                id="CorpusTab-5-tab-Lex"
                role="tab"
              >
                Lexicography
              </a>
              <a
                aria-controls="CorpusTab-5-tabpane-Med"
                aria-selected="false"
                class="nav-item nav-link"
                data-rb-event-key="Med"
                href="#"
                id="CorpusTab-5-tab-Med"
                role="tab"
              >
                Medicine
              </a>
            </nav>
            <div
              class="tab-content"
            >
              <div
                aria-hidden="false"
                aria-labelledby="CorpusTab-5-tab-L"
                class="fade tab-pane active show"
                id="CorpusTab-5-tabpane-L"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I. Narrative Poetry
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        1
                        . 
                        First Category 1
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        99
                         vv.
                      </div>
                    </li>
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        2
                        . 
                        First Category 2
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        99
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
                <section>
                  <h3>
                    II. Monologue and dialogue literature
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        1
                        . 
                        Second Category
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        2
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
                <section>
                  <h3>
                    III. Literary Hymns and Prayers
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        1
                        . 
                        Third Category
                      </div>
                      <div
                        class="col-md-4"
                      >
                        ±
                        45
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
              <div
                aria-hidden="true"
                aria-labelledby="CorpusTab-5-tab-D"
                class="fade tab-pane"
                id="CorpusTab-5-tabpane-D"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I. Celestial Divination (
                    <em>
                      Enūma Anu Enlil
                    </em>
                    )
                  </h3>
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    II. Terrestrial Divination (
                    <em>
                      Šumma Ālu
                    </em>
                    )
                  </h3>
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    III. Extispicy (
                    <em>
                      Bārûtu
                    </em>
                    )
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        1
                        . 
                        Divination Third Category
                      </div>
                      <div
                        class="col-md-4"
                      >
                        ±
                        674
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
              <div
                aria-hidden="true"
                aria-labelledby="CorpusTab-5-tab-Lex"
                class="fade tab-pane"
                id="CorpusTab-5-tabpane-Lex"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I.  Urra = 
                    <em>
                      ḫubullu
                    </em>
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        1
                        . 
                        Lexicography First Category
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        3
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
              <div
                aria-hidden="true"
                aria-labelledby="CorpusTab-5-tab-Med"
                class="fade tab-pane"
                id="CorpusTab-5-tabpane-Med"
                role="tabpanel"
              >
                <section>
                  <h3 />
                  <ol
                    class="container-fluid"
                  />
                </section>
                <section>
                  <h3>
                    I. Nineveh Medical Encyclopaedia
                  </h3>
                  <ol
                    class="container-fluid"
                  >
                    <li
                      class="row"
                    >
                      <div
                        class="col-md-11"
                      >
                        1
                        . 
                        Medicine First Category
                      </div>
                      <div
                        class="col-md-4"
                      >
                        
                        3
                         vv.
                      </div>
                    </li>
                  </ol>
                </section>
              </div>
            </div>
          </div>
          <div
            class="col-md-6"
          >
            <img
              alt="LibraryCropped.svg"
              class="img-fluid"
              src="http://example.com/images/LibraryCropped.svg"
            />
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
